# fastafs

./: .gitignore  .gitmodules  .travis.old  .travis.yml  CITATION.cff  CITATIONS.cff  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Changelog  Makefile  README.md  build-debug.sh  build-release-meson.sh  build-release.sh  build-zstd.sh  cmake_install.cmake  deps  fastafs.kdev4  guix.scm  meson.build  seekable_compression.cpp  test.txt  tidy.sh
.claude/: settings.json
benchmarks/: .~lock.youri-portable-deb_c02f8b67a564445683bc22c4f7784b92_plain.txt#  run_view_benchmarks.sh  youri-aeea40dfc0a64ab0b6234b379bf1f84a_cache_dna.txt  youri-aeea40dfc0a64ab0b6234b379bf1f84a_cache_iupac.txt  youri-aeea40dfc0a64ab0b6234b379bf1f84a_cache_protein.txt  youri-aeea40dfc0a64ab0b6234b379bf1f84a_cache_rna.txt  youri-aeea40dfc0a64ab0b6234b379bf1f84a_view_dna.txt  youri-aeea40dfc0a64ab0b6234b379bf1f84a_view_iupac.txt  youri-aeea40dfc0a64ab0b6234b379bf1f84a_view_protein.txt  youri-aeea40dfc0a64ab0b6234b379bf1f84a_view_rna.txt  youri-ccbc_aeea40dfc0a64ab0b6234b379bf1f84a.txt  youri-ccbc_aeea40dfc0a64ab0b6234b379bf1f84a_mount_ZSTD.txt  youri-ccbc_aeea40dfc0a64ab0b6234b379bf1f84a_mount_plain.txt  youri-ccbc_aeea40dfc0a64ab0b6234b379bf1f84a_view_ZSTD.txt  youri-ccbc_aeea40dfc0a64ab0b6234b379bf1f84a_view_plain.txt  youri-portable-deb_c02f8b67a564445683bc22c4f7784b92.txt  youri-portable-deb_c02f8b67a564445683bc22c4f7784b92_ZSTD.txt  youri-portable-deb_c02f8b67a564445683bc22c4f7784b92_mount_ZSTD.txt  youri-portable-deb_c02f8b67a564445683bc22c4f7784b92_mount_plain.txt  youri-portable-deb_c02f8b67a564445683bc22c4f7784b92_plain.txt  youri-portable-deb_c02f8b67a564445683bc22c4f7784b92_view_ZSTD.txt  youri-portable-deb_c02f8b67a564445683bc22c4f7784b92_view_plain.txt
cmake-modules/: GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in
dependencies/: .gitignore
dependencies/zstd-lib-common/: README.txt  xxhash.cpp
dependencies/zstd-seekable-adapted/: README.md  seekable_compression.cpp  seekable_compression.hpp  seekable_decompression.cpp  seekable_utils.cpp  seekable_utils.hpp  zstd_seekable.h  zstd_seekable_utils.hpp  zstdseek_compress.c  zstdseek_compress.cpp  zstdseek_decompress.cpp  zstdseek_utils.cpp
doc/: .gitignore  4bit.txt  Doxyfile  Doxyfile.in  FASTAFS-FORMAT-SPECIFICATION.md  TECHNICAL-SPECS.md
include/: Fasta.hpp  SequenceRegion.hpp  TwoBitByte.hpp  byte_decoder.hpp  byte_encoder.hpp  chunked_reader.hpp  config.hpp.in  database.hpp  fasta.hpp  fasta_index.hpp  fasta_to_fastafs.hpp  fasta_to_fastafs_seq.hpp  fasta_to_fourbit_fastafs.hpp  fasta_to_twobit_fastafs.hpp  fastafs.hpp  fivebit_fivebytes.hpp  flags.hpp  fourbit_byte.hpp  fuse.hpp  lsfastafs.hpp  meson.build  sequence_region.hpp  two_bit_byte.hpp  twobit.hpp  twobit_byte.hpp  twobit_header.hpp  twobit_seq.hpp  ucsc2bit.hpp  ucsc2bit_to_fastafs.hpp  utils.hpp  xbit_byte_encoder.hpp
kernel/: .gitignore  Makefile  README.txt  super.c
scripts/: benchmark.py  demo.sh  test_utils.py  tidy.sh  utils.py
src/: Fasta.cpp  SequenceRegion.cpp  TwoBitByte.cpp  byte_decoder.cpp  byte_encoder.cpp  chunked_reader.cpp  database.cpp  fasta.cpp  fasta_to_fastafs.cpp  fasta_to_fastafs_seq.cpp  fasta_to_fourbit_fastafs.cpp  fasta_to_twobit_fastafs.cpp  fastafs.cpp  fivebit_fivebytes.cpp  flags.cpp  fourbit_byte.cpp  fuse.cpp  lsfastafs.cpp  main.cpp  main_mount.cpp  meson.build  sequence_region.cpp  two_bit_byte.cpp  twobit.cpp  twobit_byte.cpp  twobit_header.cpp  twobit_seq.cpp  ucsc2bit.cpp  ucsc2bit_to_fastafs.cpp  utils.cpp  xbit_byte_encoder.cpp
test/: CMakeLists.txt  meson.build  test_functional.py  test_utils.py
test/byte_decoder/: test_byte_decoder.cpp
test/byte_encoder/: test_byte_encoder.cpp
test/cache/: meson.build  test.fa  test_cache.cpp  test_cache_fourbit.cpp  test_cache_twobit.cpp
test/check/: test_check.cpp
test/chunked_reader/: test_chunked_reader.cpp
test/data/: md5_test_dna_lowercase.fa  md5_test_dna_mixed_case.fa  md5_test_dna_n_stretches.fa  md5_test_dna_t_and_u.fa  md5_test_dna_uppercase.fa  md5_test_empty_sequence.fa  md5_test_exact_line_boundary_60nt.fa  md5_test_fourbit_with_gap.fa  md5_test_iupac_ambiguity.fa  md5_test_line_boundary_59nt.fa  md5_test_line_boundary_61nt.fa  md5_test_line_length_120nt.fa  md5_test_line_length_1nt_per_line.fa  md5_test_line_length_30nt.fa  md5_test_line_length_80nt.fa  md5_test_line_length_mixed.fa  md5_test_mixed_types.fa  md5_test_multiple_blank_lines.fa  md5_test_multiple_dna.fa  md5_test_no_final_newline.fa  md5_test_protein_sequence.fa  md5_test_protein_with_gap.fa  md5_test_protein_with_stop.fa  md5_test_rna_sequence.fa  md5_test_short_sequence.fa  md5_test_single_line_very_long.fa  test.fa  test_002.fa  test_003.fa  test_004.fa  test_005.fa  test_006.fa  test_007.fa  test_008.fa  test_009.fa  test_010.fa  test_011.fa  test_012.fa  test_013.fa  test_014.fa  (+2 more)
test/database/: test_database.cpp
test/fastafs/: meson.build  test_caching.cpp  test_fastafs.cpp  test_ucsc2bit.cpp
test/fivebit_fivebytes/: test_fivebit_fivebytes.cpp
test/flags/: test_flags.cpp
test/fourbit_byte/: test_four_byte.cpp  test_fourbit_byte.cpp
test/md5sums/: test_md5sums.cpp
test/sequenceregion/: test_sequenceregion.cpp
test/tree/: meson.build  test_tree.cpp  test_tree.py
test/twobit_byte/: test_twobit_byte.cpp
test/ucsc2bit/: test_ucsc2bit_as_fasta.cpp
test/ucsc2bit_to_fastafs/: test_ucsc2bit_to_fastafs.cpp
test/utils/: test_utils.cpp
test/view/: meson.build  test.fa  test_view.cpp  test_view_short.cpp
tmp/: .gitignore
tmp/benchmark/: .gitignore
